force-app/main/default/objects/ContactPointPhone/ContactPointPhone.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>