force-app/main/default/objects/ContactPointPhone/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Point Phones</relationshipLabel>
    <relationshipName>ContactPointPhone</relationshipName>
    <type>Lookup</type>
</CustomField>