force-app/main/default/objects/ContactPointPhone/fields/LastOutcomeFUB__c.field-meta.xml
<CustomField>
    <fullName>LastOutcomeFUB__c</fullName>
    <label>Ultimo Esito FUB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_OkKo</valueSetName>
    </valueSet>
</CustomField>