force-app/main/default/objects/ContactPointPhone/fields/LastResultDateFUB__c.field-meta.xml
<CustomField>
    <fullName>LastResultDateFUB__c</fullName>
    <description>Data di ultima esitazione FUB</description>
    <label>Data Ultimo Esito FUB</label>
    <type>Date</type>
</CustomField>