force-app/main/default/objects/ContactPointPhone/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefisso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_PhonePrefix</valueSetName>
    </valueSet>
</CustomField>