force-app/main/default/objects/ContactPointPhone/fields/SendToMarketingCloud__c.field-meta.xml
<CustomField>
    <fullName>SendToMarketingCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>