force-app/main/default/objects/ContactPointPhone/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Riporta lo stato in seguito al double opt-in</description>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verificato</fullName>
            </value>
            <value>
                <fullName>Non Verificato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>