force-app/main/default/objects/ContactPointPhone/fields/TelephoneNumberCertificationsContacts__c.field-meta.xml
<CustomField>
    <fullName>TelephoneNumberCertificationsContacts__c</fullName>
    <formula>TRIM(right(TEXT(Prefix__c) , (LEN(TEXT(Prefix__c)) - 1))) + TelephoneNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Telefono Certificazioni Contatti</label>
    <type>Text</type>
</CustomField>