force-app/main/default/objects/ContactPointPhone/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Lavoro</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>